@@ -1,3 +1,9 @@
+2007-08-21  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
+	* tag TrigT1CaloMonitoring-00-01-06
+	* share/TrigT1CaloMonitoring_topOptions.py: Add new flag doLVL1CaloCPJEPMonitoring for running within RecExCommission with no CP/JEP data in bytestream (switch off monitoring -> suppresses error messages concerning ROB fragments)
+	* add JO for running within AthenaPT
+	* add name of JO for running within RecExCommission (TrigT1CaloMonitoring_forRecExCommission.py)
+
 2007-08-15  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
 	* tag TrigT1CaloMonitoring-00-01-05
         * add src/SourceIDTool.cxx TrigT1CaloMonitoring/SourceIDTool.h for dumping SourceIDs that exist in the SW
